// protoc -I=. -I=$GOPATH/src --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package device.driver;
option go_package = "github.com/txchat/im-util/virtual/device";

message ConnectReq {
}

message ConnectReply {
}

message ReConnectReq {
}

message ReConnectReply {
}

message DisConnectReq {
}

message DisConnectReply {
}

message InputReq {
  int32 channelType = 1;
  string target = 2;
  string text = 3;
}

message InputReply {
}


message OutputReq {
}

message OutputReply {
  string msg = 1;
}

service Device {
  rpc Connect(ConnectReq) returns (ConnectReply);
  rpc ReConnect(ReConnectReq) returns (ReConnectReply);
  rpc DisConnect(DisConnectReq) returns (DisConnectReply);

  rpc Input(stream InputReq) returns (InputReply);
  rpc Output(OutputReq) returns (stream OutputReply);
}